--- a/SAI_v201912.ipynb
+++ b/SAI_v201912.ipynb
@@ -55,7 +55,7 @@
       },
       "source": [
         "!apt-get update\n",
-        "!apt-get install -y --fix-missing --no-install-recommends cuda-compiler-9-2 cuda-cublas-dev-9-2 cuda-cudart-dev-9-2"
+        "!apt-get install -y --fix-missing --no-install-recommends cuda-compiler-10-1 libcublas10 libcublas-dev cuda-cudart-dev-10-1"
       ],
       "execution_count": 0,
       "outputs": []
@@ -68,8 +68,8 @@
         "colab": {}
       },
       "source": [
-        "!wget http://developer.download.nvidia.com/compute/redist/cudnn/v7.3.1/cudnn-9.2-linux-x64-v7.3.1.20.tgz\n",
-        "!cd /usr/local && tar -xzvf /content/cudnn-9.2-linux-x64-v7.3.1.20.tgz\n",
+        "!wget http://developer.download.nvidia.com/compute/redist/cudnn/v7.6.5/cudnn-10.1-linux-x64-v7.6.5.32.tgz\n",
+        "!cd /usr/local && tar -xzvf /content/cudnn-10.1-linux-x64-v7.6.5.32.tgz\n",
         "!chmod a+r /usr/local/cuda/lib64/libcudnn*"
       ],
       "execution_count": 0,
@@ -200,36 +200,10 @@
       "metadata": {
         "id": "pcZs3f5eABsL",
         "colab_type": "code",
-        "outputId": "fcadb207-17e9-41fe-ed20-ff4886cdeac3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 83
-        }
-      },
-      "source": [
-        "!cd sai/build/autogtp/ && ./autogtp --url http://sai.unich.it/ --username $username --password $passwd -m100| grep minute"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "AutoGTP v18\n",
-            "Using 5 game thread(s) per device.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "G_FQ3EF6Fc97",
-        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "!cd sai/build/autogtp/ && ./autogtp --url http://sai.unich.it/ --username $username --password $passwd -m100| grep minute"
       ],
       "execution_count": 0,
       "outputs": []
