update ipynb file

--- a/SAI_v201912.ipynb
+++ b/SAI_v201912.ipynb
@@ -122,7 +122,8 @@
       "source": [
         "!rm -rf sai\n",
         "!git clone --recursive https://github.com/sai-dev/sai\n",
-        "!cd sai"
+        "!cd sai && git branch\n",
+        "!cd sai && git shortlog"
       ],
       "execution_count": 0,
       "outputs": []
